--- a/frontend/src/styles/YourComponent.css
+++ b/frontend/src/styles/YourComponent.css
@@ -79,7 +79,7 @@ body {
 .pagination-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* odstęp od elementów nad przyciskami */
+  margin-top: 20px;
   padding-bottom: 20px;
 }
 
@@ -105,8 +105,8 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
-  max-width: 1200px; /* Ta sama szerokość co .message-list */
-  margin: 0 auto; /* Wyśrodkowanie wzdłuż osi poziomej */
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 30px;
 }
 
@@ -117,7 +117,7 @@ body {
   border-radius: 5px;
   font-size: 16px;
 
-  width: 100%; /* Aby input zajmował całą dostępną szerokość */
+  width: 100%;
 }
 .search-bar input[type="number"] {
   height: 50px;
@@ -125,7 +125,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 14px;
-  width: 100px; /* Dostosuj szerokość inputów liczbowych */
+  width: 100px;
 }
 
 .search-bar button {
@@ -139,4 +139,3 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-/* Styl dla przycisku Previous Page */
