--- a/frontend/src/styles/pagination.css
+++ b/frontend/src/styles/pagination.css
@@ -1,7 +1,7 @@
 .pagination-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* odstęp od elementów nad przyciskami */
+  margin-top: 20px;
   padding-bottom: 20px;
 }
 
